feat(Manager): Recode Manager & Add paper run